# Digital-twin_building

./: .gitignore  Copie_de_BDTA.ipynb  LICENSE  README.md  pyproject.toml  pyproject_pre_dashboard.toml  requirements.txt
dashboard/: README.md  app.py  app_impl.py  app_pre_multistart.py  app_v1.py
data/: fdes_static.json
docs/: DEMO_SCRIPT.md  conx_exploration.md  data_path_resolution.md  hypotheses_et_ambiguities.md  hypotheses_et_ambiguities_m4.md  hypotheses_et_ambiguities_m4_multistart.md  hypotheses_et_ambiguities_pre_multistart.md  hypotheses_et_ambiguities_validated_retro_spec.md  m4_multistart_protocol.md  m4_multistart_results.md  m4_protocol_line_by_line.md  produit_demo_protocol.md  protocol_reference.md
runs/: pytest_final.xml  pytest_full.xml  pytest_m4_multistart.xml  pytest_m5.xml  pytest_m5_disclosure.xml  pytest_m6_m8.xml  pytest_m9_m10_artifacts.xml  pytest_post_m4.xml  pytest_pre_m4_multistart.xml  pytest_pre_push.xml
scripts/: materialize_post_m4.py  report_m4_multistart.py  run_m1.py  run_m10_chat_check.py  run_m1_reference.py  run_m3_determinism.py  run_m4_multistart.py  run_m4_multistart_worker.py  run_m4_reproduction.py  run_m6_inventory.py  run_m8_onboarding.py  smoke_dashboard.py  smoke_dashboard_pre_finalizer_signature_fix.py  smoke_dashboard_pre_system_temp_fix.py  smoke_dashboard_pre_temp_finalizer_fix.py
tests/: m4_executed_artifact_pre_multistart.py  m7_shared_surface_parameter_pre_approx.py  m8_onboarding_pre_rprime.py  m9_m10_validated_artifacts_v1.py  multistart_protocol_pre_v2.py  test_annual_drift.py  test_building_3d.py  (+29 more)
(+134 files in other folders)
