[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-twin"
version = "0.1.0"
description = "Physics-constrained thermal digital twin of a building, with a costed renovation decision and a grounded GPT-5.6 guide"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "numpy",
  "pandas",
  "scipy",
  "PyMuPDF>=1.27,<2",
]

[project.optional-dependencies]
# Only for the legacy Streamlit dashboard under dashboard/ (superseded by the web app).
legacy-dashboard = ["streamlit>=1.56,<2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
